# BTIDG2

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  api.html  btidg2.html  build.html  contact.html  example.html  genindex.html  index.html  license.html  objects.inv  performance.html  quick-start.html  reference.html  search.html  searchindex.js  version.html
.doctrees/: api.doctree  btidg2.doctree  build.doctree  contact.doctree  environment.pickle  example.doctree  index.doctree  license.doctree  performance.doctree  quick-start.doctree  reference.doctree  version.doctree
_sources/: api.rst.txt  btidg2.rst.txt  build.rst.txt  contact.rst.txt  example.rst.txt  index.rst.txt  license.rst.txt  quick-start.rst.txt
docs/: CMakeLists.txt  btidg2.rst  build.rst  conf.py.in  contact.rst  deploy.sh  reference.rst
example/: BTIG2_adjacency.c  BTIG2_adjacency2.c  CMakeLists.txt  hardBrainTest.c  littleConfigTest.c
includes/: README.md  brainmatrixgenerator.h  brainstruct.h  hardbrain.h  matrixstruct.h  randomforbrain.h
translator/: converter.py  param.h
translator/Configs/: ReadMe.md
